--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,26 @@
 {
-  "manifest_version": 2,
-  "name": "Spotless",
-  "description": "Effortless Spotify",
-  "version": "1.3.0",
-  "background": {
-    "scripts": [
-      "background.js"
-    ],
-    "persistent": true
-  },
-  "browser_action": {
-    "default_title": "Spotless",
-    "default_popup": "popup.html"
-  },
-  "permissions": [
-    "https://open.spotify.com/",
-    "https://spotify.com/"
-  ],
-  "icons": {
-    "128": "icon-128.png",
-    "16": "icon-16.png"
-  },
-  "content_scripts": [
-    {
-      "matches": ["https://open.spotify.com/*"],
-      "run_at": "document_end",
-      "js": ["content-script.js"]
-    }
-  ]
+	"manifest_version": 2,
+	"name": "Spotify",
+	"description": "Effortless Spotify",
+	"version": "1.3.0",
+	"background": {
+		"scripts": ["background.js"],
+		"persistent": true
+	},
+	"browser_action": {
+		"default_title": "Spotify",
+		"default_popup": "popup.html"
+	},
+	"permissions": ["https://open.spotify.com/", "https://spotify.com/"],
+	"icons": {
+		"128": "icon-128.png",
+		"16": "icon-16.png"
+	},
+	"content_scripts": [
+		{
+			"matches": ["https://open.spotify.com/*"],
+			"run_at": "document_end",
+			"js": ["content-script.js"]
+		}
+	]
 }
